# npym

./: Makefile  README.md
.github/workflows/: release-package.yml
api/: .env-template  README.md  manage.py  pyproject.toml  pytest.ini
api/npym/api/apps/pkg_trans/: models.py  npm.py  resolver.py  translator.py  urls.py  version_man.py  views.py
api/npym/api/apps/pkg_trans/management/commands/: import_npm_names.py  purge_archives.py  purge_derivates.py  test_resolver.py
api/npym/api/apps/pkg_trans/migrations/: 0001_initial.py  0002_distribution_dependencies_distribution_generated_for_and_more.py  0003_alter_distribution_js_name_and_more.py
api/npym/api/apps/pkg_trans/templates/pkg_trans/: package.html  root.html
api/npym/api/apps/pkg_trans/tests/: test_npm.py  test_resolver.py  test_translator.py  test_version_man.py
api/npym/api/django/: settings.py  urls.py  wsgi.py
api/npym/apps/pkg_trans/: iter.py  npm.py  translator.py  version_man.py  views.py
api/npym/apps/pkg_trans/management/commands/: import_npm_names.py  purge_archives.py
api/npym/apps/pkg_trans/migrations/: 0001_initial.py
api/npym/apps/pkg_trans/templates/pkg_trans/: base.html  root.html
api/npym/apps/pkg_trans/tests/: test_npm.py  test_version_man.py
api/npym/django/: settings.py  urls.py  wsgi.py
npym-info/: README.md  index.js  package.json
package/: pyproject.toml
package/npym/: __init__.py
test/: pyproject.toml
